handle errors if silent payments psbt validation fails